@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc2
 
+	- The scheduler didn't handle HTTP GET form data
+	  properly (STR #744)
 	- The pstops filter now makes sure that the prolog code
 	  is sent before the setup code (STR #776)
 	- The pstops filter now handles print files that
